--- a/piano.html
+++ b/piano.html
@@ -67,7 +67,7 @@
            <a href="/organ.html"><button class="back">organ</button></a>
            <a href="/acoustic.html"><button class="back">Acoustic</button></a>
            <div style="margin-top:180px; margin-right:110px;">
-         <a href="/musica/#!/home" ><button class="pull-right back"><b>Back</b></button></a></div>
+         <a href="/project/#!/home" ><button class="pull-right back"><b>Back</b></button></a></div>
          </footer>
 </div>
 <script src="jquery.js">  </script>
