--- a/drumkit.html
+++ b/drumkit.html
@@ -110,7 +110,7 @@ header{
 
    </div>
    <div style="margin-top: -200px; margin-left:100px;">
-   <a href="/project/#!/home" ><button class="pull-right back"><b>Back</b></button></a></div>
+   <a href="index.html#!/home" ><button class="pull-right back"><b>Back</b></button></a></div>
 
 
    <audio data-key="65" src="sounds/clap.wav"></audio>
