--- a/piano.html
+++ b/piano.html
@@ -62,12 +62,12 @@
 
         </div>
          <footer>Virtual Piano<br>
-           <a href="/piano.html"> <button class="back">piano</button></a>
-           <a href="/edm.html"><button class="back">edm</button></a>
-           <a href="/organ.html"><button class="back">organ</button></a>
-           <a href="/acoustic.html"><button class="back">Acoustic</button></a>
+           <a href="piano.html"> <button class="back">piano</button></a>
+           <a href="edm.html"><button class="back">edm</button></a>
+           <a href="organ.html"><button class="back">organ</button></a>
+           <a href="acoustic.html"><button class="back">Acoustic</button></a>
            <div style="margin-top:180px; margin-right:110px;">
-         <a href="/project/#!/home" ><button class="pull-right back"><b>Back</b></button></a></div>
+         <a href="index.html#!/home" ><button class="pull-right back"><b>Back</b></button></a></div>
          </footer>
 </div>
 <script src="jquery.js">  </script>
