--- a/pages/main.html
+++ b/pages/main.html
@@ -125,13 +125,13 @@ border:0px;
                            <div class="panel panel-default opt2" style=" height:30%; width:100%; background-color:#333333">
                             <div class="panel-body">
               			  <i  aria-hidden="true" style="color:white;font-size:100px;margin-top:50px;margin-left:80%;"></i>
-              			  <div style="margin-left:85%;color:white;">Virtual Piano</div><a href="/piano.html"> <button>piano</button></a>
-                      <a href="/edm.html"><button>edm</button></a>
-                      <a href="/organ.html"><button>organ</button></a>
-                      <a href="/acoustic.html"><button>Acoustic</button></a>
+              			  <div style="margin-left:85%;color:white;">Virtual Piano</div><a href="piano.html"> <button>piano</button></a>
+                      <a href="edm.html"><button>edm</button></a>
+                      <a href="organ.html"><button>organ</button></a>
+                      <a href="acoustic.html"><button>Acoustic</button></a>
               			  </div>
                            </div>
-                           <div class="panel panel-default opt3" style=" height:30%; width:100%; background-color:#333333;"><a href="/drumkit.html">
+                           <div class="panel panel-default opt3" style=" height:30%; width:100%; background-color:#333333;"><a href="drumkit.html">
                             <div class="panel-body"><i  aria-hidden="true"  style="color:white;font-size:100px;margin-top:50px;margin-left:80%;"></i>
               			  </div>
               			  <div style="margin-left:85%;color:white;margin-top:-14px;">Drum-kit</div>
@@ -217,4 +217,3 @@ border:0px;
 
 
 </div>
-  
