--- a/mood/radio.html
+++ b/mood/radio.html
@@ -1,19 +1,19 @@
 
 <style>
 	.img1{
-    background-image: url("/mood/mirchi.jpg");
+    background-image: url("/musica1/mood/mirchi.jpg");
     background-repeat: no-repeat;
 	background-size:cover;
 	border:0px;
 }
 .img2{
-	 background-image: url("/mood/radio2.jpg");
+	 background-image: url("/musica1/mood/radio2.jpg");
     background-repeat: no-repeat;
 	background-size:cover;
 	border:0px;
 }
 .img3{
-	 background-image: url("/mood/city.jpg");
+	 background-image: url("/musica1/mood/city.jpg");
     background-repeat: no-repeat;
 	background-size:cover;
 	border:0px;
@@ -25,24 +25,24 @@
 	border:0px;
 }
 .img5{
-	 background-image: url("/mood/mast1.jpg");
+	 background-image: url("/musica1/mood/mast1.jpg");
     background-repeat: no-repeat;
 	background-size:cover;
 	border:0px;
 }.img6{
-	 background-image: url("/mood/dil.png");
+	 background-image: url("/musica1/mood/dil.png");
     background-repeat: no-repeat;
 	background-size:cover;
 	border:0px;
 }
 .img7{
-	 background-image: url("/mood/olive1.jpg");
+	 background-image: url("/musica1/mood/olive1.jpg");
     background-repeat: no-repeat;
 	background-size:cover;
 	border:0px;
 }
 .img8{
-	 background-image: url("/mood/classics.png");
+	 background-image: url("/musica1/mood/classics.png");
     background-repeat: no-repeat;
 	background-size:cover;
 	border:0px;
@@ -111,7 +111,7 @@
 			  <div style="margin-left:85%;color:black;margin-top:-3px;">City Fm</div>
 			  </div></a>
               </div>
-			 <div class="panel panel-default img5" style="height:30%;width:100%;background-color:#333333;"><a href="http://www.onlineradios.in/mast-hindi/">
+			 <div class="panel panel-default img5" style="height:30%;width:100%;background-color:#333333;"><a href="http://www.onlineradios.in/masti-hindi/">
               <div class="panel-body">
 			  <i  aria-hidden="true" style="color:white;font-size:100px;margin-top:50px;margin-left:80%;border:0px;"></i>
 			  <div style="margin-left:85%;color:black;margin-top:-3px;">Mast Radio</div>
