--- a/songs/happy.html
+++ b/songs/happy.html
@@ -41,7 +41,7 @@
           </div><!-- modal-dialog -->
         </div><!-- modal -->
             <div style="margin-top:300px; margin-right:100px; ">
-          <a href="/project/#!/mood" ><button class="pull-right back" style="margin-left: 850px"><b>Back</b></button></a></div>
+          <a href="/musica1/#!/mood" ><button class="pull-right back" style="margin-left: 850px"><b>Back</b></button></a></div>
             </ul>
             </span>
             <span id= border></span>
@@ -74,7 +74,7 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                                                       </tr>
                                   <tr class="song edit" id="song2">
                                   	<!--   <td class="song-number"></td> -->
@@ -82,7 +82,7 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                   </tr>
                                   <tr class="song edit" id="song3">
                                     <!--   <td class="song-number"></td> -->
@@ -90,7 +90,7 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                   </tr>
                                   <tr class="song edit" id="song4">
                                    <!--    <td class="song-number"></td> -->
@@ -98,9 +98,9 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                   </tr>
-                                
+
 
                               <!-- </div> -->
                           </tbody>
