--- a/songs/rainy.html
+++ b/songs/rainy.html
@@ -40,7 +40,7 @@
           </div><!-- modal-dialog -->
         </div><!-- modal -->
         <div style="margin-top:300px; margin-right:100px; ">
-      <a href="/project/#!/mood" ><button class="pull-right back" style="margin-left: 850px"><b>Back</b></button></a></div>
+      <a href="/musica1/#!/mood" ><button class="pull-right back" style="margin-left: 850px"><b>Back</b></button></a></div>
             </ul>
             </span>
             <span id= border></span>
@@ -72,7 +72,7 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                   </tr>
                                   <tr class="song edit" id="song2">
                                   	<!--   <td class="song-number"></td> -->
@@ -80,7 +80,7 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                   </tr>
                                   <tr class="song edit" id="song3">
                                     <!--   <td class="song-number"></td> -->
@@ -88,7 +88,7 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                   </tr>
                                   <tr class="song edit" id="song4">
                                    <!--    <td class="song-number"></td> -->
@@ -96,7 +96,7 @@
                                       <td class="song-artist"></td>
                                       <td class="song-album"></td>
                                       <td class="song-length"></td>
-                                      <td> <a href="\songs\songs" download="song.mp3">Download </td>
+                                      <td> <a href="\musica1\songs\songs" download="song.mp3">Download </td>
                                   </tr>
 
 
@@ -155,12 +155,12 @@
     </script>
 <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js">
     </script>
+    <script src="rs.speech.js"></script>
 <script src ="rainy.js">
     </script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> <!-- to add visualization to our code -->
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> <!-- to add visualization to our code -->
         <script src="jsmediatags.min.js"></script>
-        <script src="rs.speech.js"></script>
 </body>
 
 </html>
